--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # this is the root URL for your site - keep empty if testing locally (or set --baseurl '' in jekyll serve) but if you plan on using
 # jekyll on github pages make sure to specify your baseurl to match the repo directory name
-# baseurl: /Wiki/articles
+baseurl: /Wiki
 
 # site runs locally at localhost:4000 when you run `jekyll serve --watch`
 port: 4001
@@ -11,7 +11,8 @@ encoding: utf-8
 plugins:
  - jekyll-sitemap
  - jekyll-avatar
- - jekyll-admin
+
+# - jekyll-admin
 
 # repository: technet2/Wiki
 
