--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: TechNet WIki v2
-# email: -email@example.com
-description: >- # A Safe place for Wiki Ninjas
+description: >- # A Safe place
 baseurl: "/Wiki" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: NetityNews
-github_username:  ProjectPete   
+url: "" # the base hostname & protocol for your site, e.g. http://example.com 
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
 # theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
