--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: TechNet WIki v2
 description: >- # A Safe place
 baseurl: "/Wiki" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com 
-
+encoding: UTF-8
 # Build settings
 markdown: kramdown
 kramdown:
